--- a/src/main/resources/com/example/projectloginpage/FxmlFiles/ForTeachers/CreateQuestions.fxml
+++ b/src/main/resources/com/example/projectloginpage/FxmlFiles/ForTeachers/CreateQuestions.fxml
@@ -13,11 +13,11 @@
 
 <ScrollPane fitToWidth="true" maxWidth="910.0" stylesheets="@../../CssFiles/style.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projectloginpage.controllers.CreateQuestionsController">
    <content>
-      <VBox maxHeight="1.7976931348623157E308" maxWidth="900.0" minHeight="-Infinity" minWidth="-Infinity" spacing="30.0" styleClass="outerVbox" stylesheets="@../../CssFiles/style.css">
+      <VBox maxHeight="1.7976931348623157E308" maxWidth="900.0" minHeight="-Infinity" minWidth="-Infinity" spacing="32.0" styleClass="createNewQuizContainer" stylesheets="@../../CssFiles/style.css">
          <children>
             <VBox spacing="5.0">
                <children>
-                  <Label styleClass="heading-label" stylesheets="@../../CssFiles/style.css" text="Create a new Quiz">
+                  <Label styleClass="heading-label" stylesheets="@../../CssFiles/style.css" text="Create new questions">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
@@ -25,18 +25,18 @@
                   <Separator prefWidth="200.0" stylesheets="@../../CssFiles/style.css" />
                </children>
             </VBox>
-            <HBox maxHeight="50.0" maxWidth="1.7976931348623157E308" spacing="30.0" styleClass="VBox" stylesheets="@../../CssFiles/style.css" VBox.vgrow="ALWAYS">
+            <HBox maxHeight="50.0" maxWidth="1.7976931348623157E308" spacing="30.0" styleClass="section-card" stylesheets="@../../CssFiles/style.css" VBox.vgrow="ALWAYS">
                <children>
-                  <VBox HBox.hgrow="ALWAYS">
+                  <VBox spacing="5.0" stylesheets="@../../CssFiles/style.css" HBox.hgrow="ALWAYS">
                      <children>
                         <Label text="Quiz Title" />
-                        <TextField maxWidth="1.7976931348623157E308" prefHeight="65.0" styleClass="textField" stylesheets="@../../CssFiles/style.css" />
+                        <TextField fx:id="quizTitleTextField" maxWidth="1.7976931348623157E308" prefHeight="65.0" styleClass="textField" stylesheets="@../../CssFiles/style.css" />
                      </children>
                   </VBox>
-                  <VBox HBox.hgrow="ALWAYS">
+                  <VBox spacing="5.0" HBox.hgrow="ALWAYS">
                      <children>
                         <Label text="Subject" />
-                        <TextField maxWidth="1.7976931348623157E308" prefHeight="65.0" styleClass="textField" stylesheets="@../../CssFiles/style.css" />
+                        <TextField fx:id="subjectTextField" maxWidth="1.7976931348623157E308" prefHeight="65.0" styleClass="textField" stylesheets="@../../CssFiles/style.css" />
                      </children>
                   </VBox>
                </children>
@@ -50,41 +50,65 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <VBox fx:id="questionsContainer" />
+            <VBox fx:id="questionsContainer" spacing="32.0" />
             <HBox>
                <children>
                   <Button fx:id="addQuestionButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Add question" HBox.hgrow="ALWAYS" />
                </children>
             </HBox>
             <Separator prefWidth="200.0" />
-            <HBox spacing="20.0" styleClass="VBox" stylesheets="@../../CssFiles/style.css" VBox.vgrow="ALWAYS">
+            <VBox styleClass="section-card" stylesheets="@../../CssFiles/style.css" VBox.vgrow="ALWAYS">
                <children>
-                  <VBox spacing="5" HBox.hgrow="ALWAYS">
+                  <HBox spacing="20.0" stylesheets="@../../CssFiles/style.css">
                      <children>
-                        <Label text="difficulty" />
-                        <ChoiceBox fx:id="difficulty" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" />
+                        <VBox spacing="5" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label text="difficulty" />
+                              <ChoiceBox fx:id="difficultyChoiceBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" />
+                           </children>
+                        </VBox>
+                        <VBox layoutX="30.0" layoutY="30.0" spacing="5" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label text="Questions type" />
+                              <ChoiceBox fx:id="questionsTypeChoiceBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" />
+                           </children>
+                        </VBox>
+                        <VBox layoutX="10.0" layoutY="10.0" spacing="5.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label text="Accessibility" />
+                              <ChoiceBox fx:id="accessibilityChoiceBoxChoiceBox" maxWidth="1.7976931348623157E308" prefWidth="150.0" />
+                           </children>
+                        </VBox>
                      </children>
-                  </VBox>
-                  <VBox spacing="5.0" HBox.hgrow="ALWAYS">
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </HBox>
+                  <HBox fx:id="timeLimitAndPasswordContainer" layoutX="10.0" layoutY="10.0" spacing="20.0" stylesheets="@../../CssFiles/style.css">
                      <children>
-                        <Label text="Time Limit" />
-                        <TextField fx:id="timeLimit" maxWidth="1.7976931348623157E308" prefWidth="150.0" text="1 hr" />
+                        <VBox fx:id="timeLimitContainer" spacing="5.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label text="Time Limit (mins)" />
+                              <TextField fx:id="timeLimitTextField" maxWidth="1.7976931348623157E308" prefHeight="42.0" prefWidth="150.0" text="45" />
+                           </children>
+                        </VBox>
+                        <VBox fx:id="passwordContainer" layoutX="30.0" layoutY="30.0" spacing="5.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label text="Password" />
+                              <TextField fx:id="passwordTextField" maxWidth="1.7976931348623157E308" prefHeight="42.0" prefWidth="150.0" />
+                           </children>
+                        </VBox>
                      </children>
-                  </VBox>
-                  <VBox layoutX="10.0" layoutY="10.0" spacing="5.0" HBox.hgrow="ALWAYS">
-                     <children>
-                        <Label text="Privacy" />
-                        <ChoiceBox fx:id="privacy" maxWidth="1.7976931348623157E308" prefWidth="150.0" />
-                     </children>
-                  </VBox>
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </HBox>
                </children>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
-            </HBox>
+            </VBox>
+            <VBox fx:id="errorBox" />
             <HBox layoutX="30.0" layoutY="469.0">
                <children>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Create Question" HBox.hgrow="ALWAYS" />
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#createQuestion" text="Create Question" HBox.hgrow="ALWAYS" />
                </children>
             </HBox>
          </children>
