--- a/src/main/resources/com/quiz_geek/FxmlFiles/common/Signup.fxml
+++ b/src/main/resources/com/quiz_geek/FxmlFiles/common/Signup.fxml
@@ -12,12 +12,12 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane minWidth="300.0" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@../CssFiles/style.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.quiz_geek.controllers.common.SignUpPageController">
-    <VBox fx:id="outerVbox" alignment="CENTER" maxHeight="400.0" maxWidth="300.0" spacing="10" styleClass="outerVbox" stylesheets="@../CssFiles/style.css">
+<StackPane minWidth="300.0" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@../../CssFiles/style.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.quiz_geek.controllers.common.SignUpPageController">
+    <VBox fx:id="outerVbox" alignment="CENTER" maxHeight="400.0" maxWidth="300.0" spacing="10" styleClass="outerVbox" stylesheets="@../../CssFiles/style.css">
       <VBox alignment="BOTTOM_LEFT" layoutX="30.0" layoutY="30.0" spacing="5.0">
          <children>
             <Label text="Full Name" />
-            <TextField fx:id="fullNameTextField" promptText="Enter your full name" styleClass="textField" stylesheets="@../CssFiles/style.css" />
+            <TextField fx:id="fullNameTextField" promptText="Enter your full name" styleClass="textField" stylesheets="@../../CssFiles/style.css" />
          </children>
       </VBox>
       <VBox alignment="BOTTOM_LEFT" spacing="5.0">
@@ -25,20 +25,20 @@
             <Label text="E-mail" />
       
               <!-- Email and Password fields -->
-              <TextField fx:id="emailTextField" promptText="Enter your email address" styleClass="textField" stylesheets="@../CssFiles/style.css" />
+              <TextField fx:id="emailTextField" promptText="Enter your email address" styleClass="textField" stylesheets="@../../CssFiles/style.css" />
          </children>
       </VBox>
       <VBox fx:id="emailErrorVbox" />
       <VBox alignment="BOTTOM_LEFT" layoutX="10.0" layoutY="117.0" spacing="5.0">
          <children>
             <Label text="Password" />
-              <PasswordField fx:id="passwordTextField" promptText="Enter your password" styleClass="textField" stylesheets="@../CssFiles/style.css" />
+              <PasswordField fx:id="passwordTextField" promptText="Enter your password" styleClass="textField" stylesheets="@../../CssFiles/style.css" />
          </children>
       </VBox>
       <VBox alignment="BOTTOM_LEFT" layoutX="10.0" layoutY="124.0" spacing="5.0">
          <children>
             <Label text="Confirm password" />
-            <PasswordField fx:id="confirmPasswordTextField" promptText="Enter your password" styleClass="textField" stylesheets="@../CssFiles/style.css" />
+            <PasswordField fx:id="confirmPasswordTextField" promptText="Enter your password" styleClass="textField" stylesheets="@../../CssFiles/style.css" />
          </children>
       </VBox>
       <VBox fx:id="passwordMismatchErrorVbox" prefHeight="200.0" prefWidth="100.0" />
@@ -60,8 +60,8 @@
       <VBox alignment="CENTER" prefHeight="34.0" prefWidth="174.0" spacing="20.0">
          <children>
       
-              <Button fx:id="signUpButton" maxWidth="1.7976931348623157E308" onAction="#linkToMainPage" styleClass="loginButtons" stylesheets="@../CssFiles/style.css" text="Sign-up" />
-              <Button fx:id="googButton" maxWidth="1.7976931348623157E308" styleClass="loginButtons" stylesheets="@../CssFiles/style.css" text="Continue with Google" />
+              <Button fx:id="signUpButton" maxWidth="1.7976931348623157E308" onAction="#linkToMainPage" styleClass="loginButtons" stylesheets="@../../CssFiles/style.css" text="Sign-up" />
+              <Button fx:id="googButton" maxWidth="1.7976931348623157E308" styleClass="loginButtons" stylesheets="@../../CssFiles/style.css" text="Continue with Google" />
          </children>
          <VBox.margin>
             <Insets top="20.0" />
