--- a/FrontEnd/src/main/resources/com/quiz_geek/FxmlFiles/common/Signup.fxml
+++ b/FrontEnd/src/main/resources/com/quiz_geek/FxmlFiles/common/Signup.fxml
@@ -14,7 +14,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
 <HBox stylesheets="@../../CssFiles/style.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.quiz_geek.controllers.common.SignUpPageController">
    <children>
        <VBox fx:id="outerVbox" alignment="CENTER" prefWidth="600.0" spacing="16.0" stylesheets="@../../CssFiles/style.css">
@@ -25,6 +24,7 @@
                <String fx:value="label-veryLarge" />
             </styleClass>
          </Label>
+         <VBox fx:id="generalErrorBox" layoutX="55.0" layoutY="268.0" />
          <VBox alignment="BOTTOM_LEFT" layoutX="30.0" layoutY="30.0" spacing="5.0">
             <children>
                <Label stylesheets="@../../CssFiles/style.css" text="Full Name">
