--- a/FrontEnd/src/main/resources/com/quiz_geek/FxmlFiles/common/Login.fxml
+++ b/FrontEnd/src/main/resources/com/quiz_geek/FxmlFiles/common/Login.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
 <HBox maxHeight="1.7976931348623157E308" stylesheets="@../../CssFiles/style.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.quiz_geek.controllers.common.LoginPageController">
    <children>
        <VBox fx:id="outerVbox" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="600.0" spacing="32.0" stylesheets="@../../CssFiles/style.css">
@@ -31,6 +30,7 @@
                <Insets bottom="45.0" left="45.0" right="45.0" top="45.0" />
             </padding>
          </VBox>
+         <VBox fx:id="errorBox" />
          <VBox spacing="16.0">
             <children>
                <VBox alignment="BOTTOM_LEFT" spacing="10.0">
@@ -82,7 +82,7 @@
             <children>
          
                        <Button fx:id="loginButton" maxWidth="1.7976931348623157E308" onAction="#linkToMainPage" stylesheets="@../../CssFiles/style.css" text="Login" />
-                 <Button fx:id="googleButton" maxWidth="1.7976931348623157E308" styleClass="button-white" stylesheets="@../../CssFiles/style.css" text="Continue with Google" />
+                 <Button fx:id="googleButton" maxWidth="1.7976931348623157E308" onAction="#loginWithGoogle" styleClass="button-white" stylesheets="@../../CssFiles/style.css" text="Continue with Google" />
                  <HBox alignment="CENTER">
                      <Label stylesheets="@../../CssFiles/style.css" text="Don't have account?">
                      <styleClass>
