--- a/FrontEnd/src/main/resources/com/quiz_geek/FxmlFiles/ForStudents/MainLayoutForStudents.fxml
+++ b/FrontEnd/src/main/resources/com/quiz_geek/FxmlFiles/ForStudents/MainLayoutForStudents.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
@@ -48,6 +51,26 @@
                      <VBox.margin>
                         <Insets />
                      </VBox.margin>
+                  </VBox>
+                  <VBox fx:id="sidebar" alignment="BOTTOM_CENTER" spacing="15" stylesheets="@../../CssFiles/style.css" VBox.vgrow="ALWAYS">
+                     <children>
+                        <ImageView fx:id="avatarImage" fitHeight="80" fitWidth="80" preserveRatio="true" style="-fx-background-radius: 40;" />
+                        <Label fx:id="usernameLabel" stylesheets="@../../CssFiles/style.css" text="John Doe" textFill="white">
+                           <styleClass>
+                              <String fx:value="label-medium" />
+                              <String fx:value="label-white" />
+                           </styleClass>
+                        </Label>
+                        <Button mnemonicParsing="false" onAction="#showLogoutConfirmation" stylesheets="@../../CssFiles/style.css" text="Logout">
+                           <styleClass>
+                              <String fx:value="button-secondaryColor" />
+                              <String fx:value="button-logout" />
+                           </styleClass>
+                        </Button>
+                     </children>
+                     <padding>
+                        <Insets bottom="40.0" right="20.0" />
+                     </padding>
                   </VBox>
                   </children>
                   <BorderPane.margin>
