--- a/FrontEnd/src/main/resources/com/quiz_geek/FxmlFiles/ForStudents/Home.fxml
+++ b/FrontEnd/src/main/resources/com/quiz_geek/FxmlFiles/ForStudents/Home.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -21,7 +22,7 @@
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
             </ToggleButton>
-            <ToggleButton fx:id="practiceQuestionsTab" minHeight="-Infinity" mnemonicParsing="false" onAction="#showPracticeQuestions" prefHeight="60.0" prefWidth="135.0" stylesheets="@../../CssFiles/style.css" text="Practice Question">
+            <ToggleButton fx:id="practiceQuestionsTab" minHeight="-Infinity" mnemonicParsing="false" onAction="#showPracticeQuestions" prefHeight="60.0" stylesheets="@../../CssFiles/style.css" text="Practice Question">
                <HBox.margin>
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
@@ -38,20 +39,24 @@
             </ToggleButton>
          </children>
       </HBox>
-      <Label styleClass="heading-label" text="Your Questions:">
+      <Label stylesheets="@../../CssFiles/style.css" text="Enrolled Assessments">
          <VBox.margin>
             <Insets left="20.0" />
          </VBox.margin>
          <font>
             <Font size="18.0" />
          </font>
+         <styleClass>
+            <String fx:value="label-extraLarge" />
+            <String fx:value="label-bold" />
+         </styleClass>
       </Label>
-      <ScrollPane fx:id = "scrollPane" fitToWidth="true" fitToHeight="true" VBox.vgrow="ALWAYS">
+      <ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" VBox.vgrow="ALWAYS">
          <VBox.margin>
             <Insets left="20.0" />
          </VBox.margin>
          <content>
-            <TilePane fx:id="tilePane" hgap = "15" vgap="15" styleClass="cardContainer" stylesheets="@../../CssFiles/style.css" >
+            <TilePane fx:id="tilePane" hgap="15" styleClass="cardContainer" stylesheets="@../../CssFiles/style.css" vgap="15">
                <padding>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </padding>
