--- a/FrontEnd/src/main/resources/com/quiz_geek/FxmlFiles/ForStudents/MainLayoutForStudents.fxml
+++ b/FrontEnd/src/main/resources/com/quiz_geek/FxmlFiles/ForStudents/MainLayoutForStudents.fxml
@@ -24,12 +24,12 @@
                               <Font size="24.0" />
                           </font>
                          <VBox.margin>
-                            <Insets left="10.0" right="10.0" top="10.0" />
+                            <Insets left="10.0" right="10.0" top="40.0" />
                          </VBox.margin>
                       </Label>
                   <VBox fx:id="sidbar" spacing="4.0">
                      <children>
-                        <ToggleButton fx:id="dashboardButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="55.0" text="Dashboard">
+                        <ToggleButton fx:id="dashboardButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#showDashboard" prefHeight="55.0" text="Dashboard">
                            <font>
                               <Font size="18.0" />
                            </font>
