--- a/FrontEnd/src/main/resources/com/quiz_geek/FxmlFiles/ForStudents/MainLayoutForStudents.fxml
+++ b/FrontEnd/src/main/resources/com/quiz_geek/FxmlFiles/ForStudents/MainLayoutForStudents.fxml
@@ -19,7 +19,7 @@
           <left>
               <VBox fx:id="leftSideBar" alignment="TOP_LEFT" prefWidth="255.0" spacing="60.0" styleClass="sidebar" stylesheets="@../../CssFiles/style.css">
                   <children>
-                      <Label style="-fx-font-size: 24; -fx-font-weight: bold; -fx-text-fill: white;" text="QUIZAPP">
+                      <Label style="-fx-font-size: 24; -fx-font-weight: bold; -fx-text-fill: white;" text="QuizGeek">
                           <font>
                               <Font size="24.0" />
                           </font>
@@ -42,7 +42,7 @@
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </ToggleButton>
-                        <ToggleButton fx:id="myResultsButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="55.0" text="My Results">
+                        <ToggleButton fx:id="myResultsButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#showMyResults" prefHeight="55.0" text="My Results">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
